add social media js code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -18,21 +18,19 @@
     </header>
     <nav>
         <ul class="main-menu">
-            <li><a href="#domestic"></i><i class="fa fa-home" aria-hidden="true"></i><span>DOMESTIC</span></a></li>
-            <li class="button"><a href="#commercial"></i><i class="fa fa-building" aria-hidden="true"></i><span>COMMERCIAL</span></a>
-            </li>
-            <li class="button"><a href="#testandtag"></i><i class="fa fa-plug" aria-hidden="true"></i><span>TEST & TAG</span></a>
-            </li>
-            <li class="button"><a href="#about"><i class="fa fa-question-circle" aria-hidden="true"></i><span>ABOUT US</span></a>
-            </li>
-            <li class="button"><a href="#contact"><i class="fa fa-phone" aria-hidden="true"></i><span>CONTACT US</span></a></li>
+            <li><a id="domestic" href="#domestic"><i class="fa fa-home" aria-hidden="true"></i><span>DOMESTIC</span></a></li>
+            <li class="button"><a id="#commercial" href="#commercial"><i class="fa fa-building" aria-hidden="true"></i><span>COMMERCIAL</span></a></li>
+            <li class="button"><a id="#testandtag" href="#testandtag"><i class="fa fa-plug" aria-hidden="true"></i><span>TEST & TAG</span></a></li>
+            <li class="button"><a id="#about" href="#about"><i class="fa fa-question-circle" aria-hidden="true"></i><span>ABOUT US</span></a></li>
+            <li class="button"><a id="#contact" href="#contact"><i class="fa fa-phone" aria-hidden="true"></i><span>CONTACT US</span></a></li>
         </ul>
         <ul class="social-menu">
-            <div><i class="fa fa-twitter" aria-hidden="true"></i></div>
-            <div><i class="fa fa-facebook" aria-hidden="true"></i></div>
-            <div><i class="fa fa-youtube" aria-hidden="true"></i></div>
+            <div><i class="fa fa-twitter" id="twitter" aria-hidden="true"></i></div>
+            <div><i class="fa fa-facebook" id="facebook" aria-hidden="true"></i></div>
+            <div><i class="fa fa-youtube" id="youtube" aria-hidden="true"></i></div>
         </ul>
     </nav>
+    
 
     <main>
         <section class="home" id="home">
