--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </header>
     <nav>
         <ul class="main-menu">
-            <li><a id="domestic" href="#domestic"><i class="fa fa-home" aria-hidden="true"></i><span>DOMESTIC</span></a></li>
-            <li class="button"><a id="#commercial" href="#commercial"><i class="fa fa-building" aria-hidden="true"></i><span>COMMERCIAL</span></a></li>
-            <li class="button"><a id="#testandtag" href="#testandtag"><i class="fa fa-plug" aria-hidden="true"></i><span>TEST & TAG</span></a></li>
-            <li class="button"><a id="#about" href="#about"><i class="fa fa-question-circle" aria-hidden="true"></i><span>ABOUT US</span></a></li>
-            <li class="button"><a id="#contact" href="#contact"><i class="fa fa-phone" aria-hidden="true"></i><span>CONTACT US</span></a></li>
+            <li class="button"><a href="#domestic"><i class="fa fa-home" aria-hidden="true"></i><span>DOMESTIC</span></a></li>
+            <li class="button"><a href="#commercial"><i class="fa fa-building" aria-hidden="true"></i><span>COMMERCIAL</span></a></li>
+            <li class="button"><a href="#testandtag"><i class="fa fa-plug" aria-hidden="true"></i><span>TEST & TAG</span></a></li>
+            <li class="button"><a href="#about"><i class="fa fa-question-circle" aria-hidden="true"></i><span>ABOUT US</span></a></li>
+            <li class="button"><a href="#contact"><i class="fa fa-phone" aria-hidden="true"></i><span>CONTACT US</span></a></li>
         </ul>
         <ul class="social-menu">
             <div><i class="fa fa-twitter" id="twitter" aria-hidden="true"></i></div>
