adjust mobile settings

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <header>
+    <header class="wam-bg-red">
         <a href="#home"></a>
     </header>
     <nav>
@@ -70,11 +70,11 @@
 
     </main>
 
-    <footer>
+    <footer class="">
         <ul class="social-menu">
             <div><i class="fa fa-twitter" id="twitter" aria-hidden="true"></i></div>
             <div><i class="fa fa-facebook" id="facebook" aria-hidden="true"></i></div>
-            <div><i class="fa fa-youtube" id="youtube" aria-hidden="true"></i></div>
+            <div><i class="fa fa-youtube wam-bg-red" id="youtube" aria-hidden="true"></i></div>
         </ul>
     </footer>
 
