correct image links and js script link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <nav>
         <div class="logo-wrapper">
-            <img src="images/logo.png" alt="Wires and More Logo">
+            <img src="images/images/logo/logo.png" alt="Wires and More Logo">
         </div>
         <div class="nav-wrapper">
             <ul class="nav-links">
@@ -35,7 +35,7 @@
     <main>
         <section class="home-grid-wrapper" id="home">
             <div class="grid-item item-1">
-                <img class="home-image" src="images/home.jpg" alt="Home services image">
+                <img class="home-image" src="images/images/categories/home.jpg" alt="Home services image">
             </div>
             <div class="grid-item item-2">
                 <h2>ELECTRICAL</h2>
@@ -45,11 +45,12 @@
                 <div class="info-area">
                     <p>At Wires and More, we provide comprehensive electrical services for both domestic and commercial
                         clients. Our team of certified electricians is skilled in handling everything from new
-                        installations and upgrades to troubleshooting and repairs.<br><br>
+                        installations and upgrades to troubleshooting and repairs. <br><br>
+
                         Whether you need a complete rewiring for your home or electrical system maintenance for your
                         business, we ensure that every job is completed safely and efficiently. We pride ourselves on
                         using the latest techniques and equipment to deliver high-quality electrical solutions that meet
-                        all safety standards.</p>
+                        all safety standards..</p>
                 </div>
             </div>
             <div class="grid-item item-3">
@@ -59,11 +60,13 @@
                 </div>
                 <div class="info-area">
                     <p>In today's connected world, reliable data services are essential for any home or business. Wires
-                        and More offers cutting-edge solutions for all your data management and connectivity needs. From
+                        and More offers cutting-edge solutions for all your data management and connectivity needs.
+                        <br><br>From
                         installing high-speed internet and network systems to troubleshooting and repairs, our
-                        experienced technicians ensure that your data infrastructure is robust and efficient. <br><br>
+                        experienced technicians ensure that your data infrastructure is robust and efficient.
                         We tailor our services to meet your specific requirements, providing seamless connectivity and
-                        enhancing the overall performance of your network.</p>
+                        enhancing the overall performance of your network.
+                    </p>
                 </div>
             </div>
             <div class="grid-item item-4">
@@ -90,7 +93,8 @@
                     <p>Regular maintenance is key to the longevity and reliability of your electrical and data systems.
                         Wires and More offers scheduled maintenance services to keep your installations in optimal
                         condition. Our preventative maintenance plans are designed to identify and address potential
-                        problems before they become major issues, saving you time and money in the long run. Whether
+                        problems before they become major issues, saving you time and money in the long run. <br><br>
+                        Whether
                         it's routine checks, system updates, or emergency repairs, our team is ready to provide the
                         support you need to keep your systems running smoothly.</p>
                 </div>
@@ -100,9 +104,11 @@
                     businesses for 30 years."</h3>
             </div>
         </section>
+        <!-- ABOUT SECTION -->
         <section class="about-grid-wrapper" id="about">
             <div class="grid-item item-1">
-                <img class="about-image" src="images/about.jpg" alt="City buildings in black and white">
+                <img class="about-image" src="images/images/categories/about.jpg"
+                    alt="City buildings in black and white">
             </div>
             <div class="grid-item item-2">
                 <h2>OUR STORY</h2>
@@ -128,7 +134,7 @@
                     <p>Discover our specialized skills in electrical and data services. Our team of professionals
                         possesses extensive knowledge and experience in the industry, allowing us to tackle any project
                         with confidence. We are proficient in the latest technologies and techniques, ensuring that we
-                        provide innovative solutions tailored to your needs. Whether it's a complex data network
+                        provide innovative solutions tailored to your needs. <br><br>Whether it's a complex data network
                         installation or a simple electrical repair, our expertise guarantees a job well done every time.
                     </p>
                 </div>
@@ -142,7 +148,8 @@
                     <p>Our dedication to delivering personalized solutions that exceed expectations. At Wires and More,
                         we believe that every client deserves individualized attention and bespoke services. We take the
                         time to understand your specific requirements and work closely with you to develop solutions
-                        that meet and exceed your expectations. Our commitment to excellence is reflected in the quality
+                        that meet and exceed your expectations. <br><br>Our commitment to excellence is reflected in the
+                        quality
                         of our work and the satisfaction of our clients. We strive to build long-lasting relationships
                         based on trust and reliability.</p>
                 </div>
@@ -156,7 +163,8 @@
                     <p>How we contribute positively to our local community and beyond. Wires and More is not just a
                         business; we are a part of the community. We actively participate in local initiatives and
                         support various community programs. Our goal is to make a positive impact not only through our
-                        services but also by giving back to the community that has supported us. We believe in the power
+                        services but also by giving back to the community that has supported us. <br><br>We believe in
+                        the power
                         of community and are dedicated to making a difference in the lives of those around us.</p>
                 </div>
             </div>
@@ -165,9 +173,10 @@
                 </h3>
             </div>
         </section>
+        <!-- SERVICES SECTION -->
         <section class="services-grid-wrapper" id="services">
             <div class="grid-item item-1">
-                <img class="services-image" src="images/services.jpg" alt="Services overview image">
+                <img class="services-image" src="images/images/categories/services.jpg" alt="Services overview image">
             </div>
             <div class="grid-item item-2">
                 <h2>ELECTRICAL SOLUTION</h2>
@@ -177,7 +186,7 @@
                 <div class="info-area">
                     <p>Comprehensive services from installation to maintenance. Wires and More offers a wide range of
                         electrical solutions tailored to meet the needs of both residential and commercial clients. Our
-                        services include new installations, system upgrades, repairs, and maintenance. We use
+                        services include new installations, system upgrades, repairs, and maintenance. <br><br>We use
                         high-quality materials and adhere to strict safety standards to ensure reliable and efficient
                         electrical systems. Whether you're building a new home, renovating an office, or need emergency
                         repairs, our team is here to help.</p>
@@ -192,7 +201,8 @@
                     <p>Cutting-edge solutions for data management and connectivity. Our data services are designed to
                         provide seamless and efficient connectivity for your home or business. From setting up secure
                         networks to installing high-speed internet, we ensure that your data infrastructure is robust
-                        and reliable. Our technicians are skilled in the latest technologies and can provide solutions
+                        and reliable. <br><br>Our technicians are skilled in the latest technologies and can provide
+                        solutions
                         that enhance your productivity and connectivity. We also offer ongoing support and maintenance
                         to keep your systems running smoothly.</p>
                 </div>
@@ -205,7 +215,7 @@
                 <div class="info-area">
                     <p>Expert advice tailored to your specific needs and goals. At Wires and More, we understand that
                         every project is unique. That's why we offer personalized consultation services to help you make
-                        informed decisions about your electrical and data needs. Our experts will assess your
+                        informed decisions about your electrical and data needs. <br><br>Our experts will assess your
                         requirements, provide recommendations, and develop a comprehensive plan that aligns with your
                         goals. Whether you're planning a new installation or need advice on upgrading your current
                         systems, our consultation services are designed to provide the guidance you need.</p>
@@ -220,7 +230,7 @@
                     <p>Flexible solutions designed to meet unique requirements. We recognize that no two projects are
                         the same, which is why we offer customized solutions to meet your specific needs. Our team works
                         closely with you to understand your requirements and develop tailored solutions that fit your
-                        budget and timeline. From custom lighting designs to specialized data setups, we provide
+                        budget and timeline. <br><br>From custom lighting designs to specialized data setups, we provide
                         flexible and innovative solutions that enhance the functionality and aesthetics of your space.
                     </p>
                 </div>
@@ -230,9 +240,10 @@
                     needs."</h3>
             </div>
         </section>
+        <!-- CONTACT SECTION -->
         <section class="contact-grid-wrapper" id="contact">
             <div class="grid-item item-1">
-                <img class="contact-image" src="images/contact.jpg" alt="Contact us image">
+                <img class="contact-image" src="images/images/categories/contact1.jpg" alt="Contact us image">
             </div>
             <div class="grid-item item-2">
                 <h2>GET IN TOUCH</h2>
@@ -240,11 +251,15 @@
                     <img src="images/icons/contact/touch.png" alt="Get in touch icon">
                 </div>
                 <div class="info-area">
-                    pReach out to discuss your project or service needs. At Wires and More, we are always ready to
-                    assist you with your electrical and data requirements. Whether you have a question, need a quote, or
-                    want to schedule a service, our team is here to help. Contact us via phone, email, or through our
-                    website, and we'll be happy to provide the support you need. Your satisfaction is our top priority,
-                    and we strive to make the process as easy and convenient as possible.
+                    <p> Reach out to discuss your project or service needs. At Wires and More, we are always ready to
+                        assist you with your electrical and data requirements. Whether you have a question, need a
+                        quote, or
+                        want to schedule a service, our team is here to help. <br><br>Contact us via phone, email, or
+                        through
+                        our
+                        website, and we'll be happy to provide the support you need. Your satisfaction is our top
+                        priority,
+                        and we strive to make the process as easy and convenient as possible.</p>
                 </div>
             </div>
             <div class="grid-item item-3">
@@ -255,7 +270,8 @@
                 <div class="info-area">
                     <p>Assistance and guidance from our friendly team. Our customer support team is dedicated to
                         providing you with the best possible service. Whether you need technical support, have questions
-                        about our services, or require assistance with a project, we are here to help. Our knowledgeable
+                        about our services, or require assistance with a project, we are here to help. <br><br>Our
+                        knowledgeable
                         and friendly staff will ensure that you receive the guidance and support you need, every step of
                         the way.</p>
                 </div>
@@ -268,7 +284,8 @@
                 <div class="info-area">
                     <p>Find our offices or service points near you. Wires and More operates in multiple locations to
                         better serve our clients. Visit our website to find the office or service point nearest to you.
-                        Our locations are strategically placed to provide quick and efficient service, ensuring that we
+                        <br><br>Our locations are strategically placed to provide quick and efficient service, ensuring
+                        that we
                         can meet your needs promptly. We look forward to serving you at one of our convenient locations.
                     </p>
                 </div>
@@ -281,7 +298,8 @@
                 <div class="info-area">
                     <p>Details about when we are available to assist you. Our service hours are designed to accommodate
                         your busy schedule. We offer flexible hours to ensure that you can receive the services you need
-                        when it's most convenient for you. Visit our website or contact us directly to learn more about
+                        when it's most convenient for you. <br><br>Visit our website or contact us directly to learn
+                        more about
                         our service hours and to schedule an appointment. We are committed to providing timely and
                         reliable service to all our clients.</p>
                 </div>
@@ -292,7 +310,7 @@
             </div>
         </section>
     </main>
-    <script src="js/script.js"></script>
+    <script src="script/main.js"></script>
 </body>
 
 </html>
