--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                     <img src="images/icons/home/electrical.png" alt="Electrical services icon">
                 </div>
                 <div class="info-area">
-                    <p>At Wires and More, we provide comprehensive electrical services for both domestic and commercial
+                    <p> At Wires and More, we provide comprehensive electrical services for both domestic and commercial
                         clients. Our team of certified electricians is skilled in handling everything from new
-                        installations and upgrades to troubleshooting and repairs. <br><br>
+                        installations and upgrades to troubleshooting and repairs.<br><br>
 
                         Whether you need a complete rewiring for your home or electrical system maintenance for your
                         business, we ensure that every job is completed safely and efficiently. We pride ourselves on
                         using the latest techniques and equipment to deliver high-quality electrical solutions that meet
-                        all safety standards..</p>
+                        all safety standards.</p>
                 </div>
             </div>
             <div class="grid-item item-3">
@@ -59,12 +59,12 @@
                     <img src="images/icons/home/data.png" alt="Data services icon">
                 </div>
                 <div class="info-area">
-                    <p>In today's connected world, reliable data services are essential for any home or business. Wires
-                        and More offers cutting-edge solutions for all your data management and connectivity needs.
-                        <br><br>From
-                        installing high-speed internet and network systems to troubleshooting and repairs, our
-                        experienced technicians ensure that your data infrastructure is robust and efficient.
-                        We tailor our services to meet your specific requirements, providing seamless connectivity and
+                    <p> In today's connected world, reliable data infrastructure is essential for any home or business.
+                        Wires and More offers cutting-edge solutions for all your data cabling needs. <br><br>
+
+                        From installing network cabling, patch panels, and data points to troubleshooting and repairs,
+                        our experienced technicians ensure that your data infrastructure is robust and efficient. We
+                        tailor our services to meet your specific requirements, providing seamless connectivity and
                         enhancing the overall performance of your network.
                     </p>
                 </div>
@@ -77,11 +77,12 @@
                 <div class="info-area">
                     <p>Ensuring the safety and functionality of your electrical systems is a top priority at Wires and
                         More. Our comprehensive testing services include detailed inspections of electrical
-                        installations, appliances, and data systems. We utilize advanced testing equipment to identify
-                        potential issues and ensure that everything operates correctly. <br><br>Our test and tagging
-                        services provide peace of mind, knowing that your electrical appliances comply with safety
-                        regulations and are safe to use. We are committed to maintaining the highest safety standards in
-                        all our testing procedures.</p>
+                        installations, appliances, and data systems. <br><br>
+
+                        Our test and tagging services provide peace of mind, knowing that your electrical appliances
+                        comply with safety regulations and are safe to use. We are committed to maintaining the highest
+                        safety standards in all our testing procedures.
+                    </p>
                 </div>
             </div>
             <div class="grid-item item-5">
@@ -92,11 +93,13 @@
                 <div class="info-area">
                     <p>Regular maintenance is key to the longevity and reliability of your electrical and data systems.
                         Wires and More offers scheduled maintenance services to keep your installations in optimal
-                        condition. Our preventative maintenance plans are designed to identify and address potential
-                        problems before they become major issues, saving you time and money in the long run. <br><br>
-                        Whether
-                        it's routine checks, system updates, or emergency repairs, our team is ready to provide the
-                        support you need to keep your systems running smoothly.</p>
+                        condition. <br><br>
+
+                        Our services are designed to prevent potential problems before they become major
+                        issues, saving you time and money in the long run. Whether it's routine checks, system updates,
+                        or emergency repairs, our team is ready to provide the support you need to keep your systems
+                        running smoothly.
+                    </p>
                 </div>
             </div>
             <div class="grid-item item-6">
